--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,25 @@
---- #YAML:1.0
-name:                Net-CIDR-Lookup
-version:             0.3.1
-abstract:            Hash-like lookup table based on CIDR blocks
-license:             perl
-author:              
-    - Matthias Bethke <matthias@towiski.de>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::Class:                   0
-    Test::More:                    0
+---
+abstract: 'Hash-like lookup table based on CIDR blocks'
+author:
+  - 'Matthias Bethke <matthias@towiski.de>'
+build_requires:
+  Class::Data::Inheritable: 0
+  Test::Class: 0
+  Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621'
+license: perl
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Net-CIDR-Lookup
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Bit::Vector: 0
+  Socket: 1.94
+version: 0.5
